[package]
name = "megacommerce-shared"
version = "0.4.42"
edition = "2024"
description = "Shared utils, models, config, ... for MegaCommerce Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahmad-khatib0-org/megacommerce-shared-rust"
readme = "README.md"
keywords = ["utils", "models", "megacommerce"]
categories = ["api-bindings", "network-programming"]
publish = true

[dependencies]
megacommerce-shared-sanitize-derive = { version = "0.1.4", optional = true }
## core
megacommerce-proto = "0.3.1"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "json",
  "bigdecimal",
] }
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tower = "0.5.2"
http = "1.3.1"
tera = "1.20.0"

## serialize/deserialize
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

## macros
thiserror = "2.0.12"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["display"] }

## utils
ulid = "1.2.1"
unidecode = "0.3.0"
scopeguard = "1.2.0"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.2"

[features]
default = ["all"]
utils = []
models = []
store = []
macros = ["megacommerce-shared-sanitize-derive"]
all = ["utils", "models", "macros", "store"]

[profile.bench]
debug = true
